# SPDX-FileCopyrightText: Copyright 2020-2026, Contributors to Tyrannosaurus
# SPDX-PackageHomePage: https://github.com/dmyersturnbull/tyrannosaurus
# SPDX-License-Identifier: Apache-2.0

#
####################################################################################################
#                                      [build-system]
####################################################################################################

[build-system]

build-backend = "uv_build"
requires = ["uv-build>=0.11, <1.0"]

#
####################################################################################################
#                                      [project]
####################################################################################################

[project]

name = "tyranno-sandbox"
# Versions must follow the Python specification, which is NOT semver:
# https://packaging.python.org/en/latest/specifications/version-specifiers/#version-specifiers
# Pre-release syntaxes differ: e.g. Python `1.0.0a1` vs. semver `1.0.0-a.1`.
# Tyranno-sandbox's CI/CD workflows look for either:
# 1. `major.minor.patch` => triggers release
# 2. `major.minor.patch.{alpha|beta|rc}.{0+}` (e.g. `1.0.0-rc.0`) => test only
version = "0.0.1-alpha.0"
requires-python = "~=3.14.5"

# `readme` is `description` in `importlib.metadata`.
readme = { file = "README.md", content-type = "text/markdown" }
# `description` is `summary` in `importlib.metadata`.
description = "Sandbox to test CI/CD in Tyrannosaurus"
keywords = [
  "ci/cd",
  "cookiecutter",
  "github-actions",
  "python-template",
]
authors = [
  { name = "Douglas Myers-Turnbull", email = "dmyersturnbull@gmail.com" },
]
maintainers = [
  { name = "Douglas Myers-Turnbull", email = "dmyersturnbull@gmail.com" },
]
license = { text = "Apache-2.0" }

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Code Generators",
  "Typing :: Typed",
]

# -------------------------- dependencies -------------------------------------
# For full syntax, see:
# https://packaging.python.org/en/latest/specifications/dependency-specifiers/#dependency-specifiers
dependencies = [
  "aiofiles>=25.1",
  "loguru>=0.7.3",
  "niquests>=3.19",
  "packaging>=26.0",
  "platformdirs>=4.10",
  "pathspec>=1.1",
  "jsonpath-ng>=1.8",
  "semver>=3.0.4",
  # /usr/share/zoneinfo uses IANA zones; Windows does not
  # OR `"tzdata>=2026.1; platform_system == 'Windows'",`
  "tzdata>=2026.2; platform_system != 'Linux'",
]

# -------------------------- optional dependencies ----------------------------
[project.optional-dependencies]
cli = [
  "typer>=0.26.6",
]
server = [
  "fastapi>=0.136",
  "fastapi-problem>=0.12",
  "Hypercorn[h3]>=0.18",
  "pydantic>=2.13",
  "rfc9457>=0.4",
  "starlette-compress>=1.7; python_version < '3.14'",
]

# -------------------------- scripts ------------------------------------------
[project.scripts]
# ::tyranno:: $<<project.name>> = "$<<.namespace>>.__main__:cli"
tyranno-sandbox = "tyranno_sandbox.__main__:cli"

# -------------------------- project URIs -------------------------------------
[project.urls]
# ::tyranno:: "https://github.com/$<<.frag>>"
Homepage = "https://github.com/dmyersturnbull/tyranno-sandbox"
# ::tyranno:: "https://github.com/$<<.frag>>"
Source = "https://github.com/dmyersturnbull/tyranno-sandbox"
# ::tyranno:: Documentation = https://$<<.vendor>>.github.io/$<<project.name>>
Documentation = "https://dmyersturnbull.github.io/tyranno-sandbox"
# ::tyranno:: "Issue Tracker" = $<<.home>>/issues
Tracker = "https://github.com/dmyersturnbull/tyranno-sandbox/issues"
# ::tyranno:: Download = "https://pypi.org/project/$<<project.name>>"
Download = "https://pypi.org/project/tyranno-sandbox/"
# ::tyranno:: "Release Notes" = "https://github.com/$<<.frag>>/releases"
"Release Notes" = "https://github.com/dmyersturnbull/tyranno-sandbox/releases"

#
####################################################################################################
#                                      [dependency-groups]
####################################################################################################

# See https://docs.astral.sh/uv/concepts/projects/dependencies/#dependency-groups
[dependency-groups]

# uv includes `dev` by default and has dedicated `--only-dev` / `--no-dev` / etc. switches.
# The other groups are used in CI.
dev = [
  { include-group = "test" },
  { include-group = "docs" },
  { include-group = "sbom" },
  { include-group = "lint" },
  { include-group = "git-hooks" },
]

# pytest and supporting tools
test = [
  "coverage[toml]>=7.14", # Required for coverage.
  "hypothesis>=6.155", # Required for property tests.
  "pytest>=9.0", # Required.
  "pytest-cov>=7.1", # Required for coverage.
  # "pytest-datadir>=1.8", # Optional. To read test resources in the same dir.
  # "pytest-randomly>=4.0", # Optional. Sets and prints the seed, also randomizing test order.
  # "pytest-xdist>=3.8", # Optional. Used to distribute tests over multiple cores.
]

# Documentation tools
docs = [
  "mkdocstrings-python>=2.0,<3.0",
  "zensical>=0.0.43", # https://zensical.org/
]

sbom = [
  "pip-licenses-cli[spdx]>=4.0",
]

# Python-ecosystem lint tools that can be called directly
lint = [
  "ruff>=0.15.15",
  "ty>=0.0.42", # Astral's fledgling type checker.
]

# prek and any dependencies for local hooks
git-hooks = [
  "pathvalidate>=3.3", # Needed for local prek hook.
  "prek>=0.4.3",
]

#
####################################################################################################
#                                      [tool.ruff]
####################################################################################################

[tool.ruff]
exclude = [] # Rely on https://docs.astral.sh/ruff/settings/#respect-gitignore
src = ["src"] # Needed for import sorting
line-length = 100

# -------------------------- Ruff formatter -----------------------------------
[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

# -------------------------- Ruff linter --------------------------------------
[tool.ruff.lint]

# It's simpler to select all rules and ignore the few we don't want.
preview = true
select = ["ALL"]

#          >>>#<<< align to col 15 (max possible width)
ignore = [
  # Rules that conflict with the formatter:
  # (See https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
  "W191",
  "E111",
  "E114",
  "E117",
  "D203",
  "D206",
  "D300",
  "Q",
  "COM812",
  "COM819",
  "ISC002",
  "E501",
  # ---
  # Other ignored rules:
  # Syntax of comments: <rule-description> '(' <reason-ignored> ')'
  "D1",       # undocumented public __ (omit useless comments)
  "D401",     # imperative mood (nitpicky rule)
  "D417",     # undocumented param (omit useless comments)
  "DOC201",   # missing `Returns:` (omit useless comments)
  "DOC402",   # missing `Yields:` (omit useless comments)
  "DOC501",   # missing `Raises:` exception (omit useless comments)
  "DOC502",   # `Raises` lists exeption not raised directly (often helpful to list anyway)
  "FIX002",   # TO*DO (consider TO*DO non-crucial tasks, whereas FIX*ME are crucial)
  "PLR2004",  # magic value (includes 2, 256, 404, etc.)
  "PLR6301",  # 'self' not used (total non-issue and unavoidable when overriding)
  "RUF001",   # confusable characters in strings (bans useful chars)
  "RUF002",   # confusable characters in docstrings (bans useful chars)
  "RUF003",   # confusable characters in comments (bans useful chars)
  "RUF021",   # `or x and y` without parentheses (unnecessary)
  "S403",     # import of pickle (S301 on pickle calls is enough)
  "S404",     # import of subprocess (S602/S603 on subprocess calls is enough)
  "TD",       # flake8-to*do (requires a specific format)
  "Q",        # quotes (formatter should cover completely)
  "W505",     # docstring line too long (use semantic line breaks instead)
]

# Syntax of comments: <rule-description> '(' <reason-for-change> ')'
unfixable = [
  "TC007",    # quotes type alias definitions (move needed imports outside `TYPE_CHECKING` instead)
]

# Delegated options
flake8-bandit.check-typed-exception = true
flake8-copyright.min-file-size = 2048
flake8-copyright.notice-rgx = "(?m)^# SPDX-License-Identifier: "
flake8-tidy-imports.ban-relative-imports = "all"
isort.detect-same-package = false # use `tool.ruff.src` instead
isort.split-on-trailing-comma = false # conflicts with the formatter
pycodestyle.max-doc-length = 100 # match tool.ruff.line-length
pydocstyle.convention = "google"

# Delegated options for pylint
[tool.ruff.lint.pylint]
max-args = 10 # default is 5
max-positional-args = 5 # default is `max-args`
max-bool-expr = 10 # default is 5
max-public-methods = 30 # default is 20
max-nested-blocks = 4 # default is 5
allow-dunder-method-names = ["__rich_repr__"] # allow custom dunders

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
  "D1",       # missing docstrings
  "S101",     # assert
  "TID252",   # relative import
]

#
####################################################################################################
#                                      [tool.pytest]
####################################################################################################

[tool.pytest]

# ******************************* Notes for running tests ******************************************
# CWD and editor support:
# - When running tests, the working directory should be the project root.
# - pytest-cov is not compatible with the PyCharm/IntelliJ debugger.
#   See https://www.jetbrains.com/help/pycharm/run-debug-configuration-py-test.html
#
# Notable CLI options:
# - `--cov` to calculate coverage (saved to `.coverage.json`).
# - `-n <n_workers>` to distribute over `n_workers` workers via pytest-xdist.
#   Use `-n auto` to use the number of **physical** cores (which might be 1/2 occupancy).
#   This suppresses logging; see https://github.com/pytest-dev/pytest-xdist/issues/574
# **************************************************************************************************

# This pytest 7+ option avoids repeating the package name in various options.
pythonpath = ["src/"]

# Set the default path to `tests/` so that it can be omitted on CLI.
# Don't use `.` or `["tests/", "src/"]`, which would run `src/**/test*.py`.
# For doctests, run `pytest --doctest-modules src/`
testpaths = ["tests/"]

# Error if a test has an empty parameter set.
empty_parameter_set_mark = "fail_at_collect"

# -------------------------- Logging config -----------------------------------
# Configure logging, and send it "live" (in realtime) to stdout with `log_cli`.
# In `tests/**/*.py`, append `-TEST` to logger names to distinguish them.
log_level = "WARNING"
log_cli = true
log_format = "%(asctime)s %(levelname)-7s %(name)s %(filename)s:%(lineno)s | %(message)s "
log_date_format = "%Y-%m-%d %H:%M:%S"

# -------------------------- Doctest options ----------------------------------
# These are used when running `pytest --doctest-modules src/`.
doctest_optionflags = [
  "DONT_ACCEPT_TRUE_FOR_1", # Makes doctest not consider 1 to equal True.
  "NORMALIZE_WHITESPACE",   # Ignores newlines, so we can wrap the expected output.
]

# -------------------------- Test markers -------------------------------------
# Define markers that are useful to include/exclude sets of tests.
# Note that the `hypothesis` marker is auto-added.
# - Simple tests only: `-m 'not (slow or net or ux or e2e)'`
# - Simple property tests: `-m 'hypothesis and not (slow or net or ux or e2e)'`
markers = [
  "slow: tests that need a long time to run",
  "net: tests that need network access",
  "ux: tests that need user interaction or manual verification",
  "e2e: tests that need external services",
]

# -------------------------- Pytest CLI args ----------------------------------
# The `--cov-*` options are handled by pytest-cov.
addopts = [
  "--import-mode=importlib", # recommended as of PyTest 8
  "--cov-report=term",       # report what functions, etc., are covered
  "--strict",                # fail if invalid markers, config options, etc. are passed
  "--tb=short",              # prefer shorter tracebacks
  "--quiet",                 # just hides ouptut about 'rootdir', 'testpaths', etc.
]

#
###################################################################################################
#                                      [tool.coverage]
###################################################################################################

# -------------------------- Coverage runs ------------------------------------
[tool.coverage.run]
data_file = ".coverage.json"
branch = true # Quantify the % coverage of execution branches.
relative_files = true # See https://coverage.readthedocs.io/en/7.12.0/config.html#run-relative-files
omit = ["**/__main__.py"]
concurrency = [] # Imortant!

# -------------------------- Default coverage paths ---------------------------
[tool.coverage.paths]
source = ["src/"]

# -------------------------- Coverage reports ---------------------------------
[tool.coverage.report]
fail_under = 2 # Require % coverage to ensure config is correct
format = "markdown"
precision = 1 # n decimal points for coverage %
show_missing = true
skip_empty = true
exclude_also = [
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == \"__main__\":",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
]

[tool.coverage.json]
output = ".coverage.json"

#
####################################################################################################
#                                      [tool.tyranno]
####################################################################################################

[tool.tyranno]

# Target files for `tyranno sync`.
# Uses gitignore syntax, always excluding `.gitignore`-d files.
targets = [
  "/.*ignore",
  "/.editorconfig",
  "/CITATION.cff",
  "/justfile",
  "*.jsonc",
  "*.md",
  "*.py",
  "*.toml",
  "*.yaml",
  "Dockerfile",
]

# -------------------------- Tyranno data -------------------------------------
# Keys only referenced in `::tyranno::` comments.
[tool.tyranno.data]
vendor = "dmyersturnbull"
# ::tyranno:: namespace = "$<< $ .project .name .replace(@, '_', '-') .lower(@) >>"
namespace = "tyranno_sandbox"
# ::tyranno:: frag = "$<<.vendor>>/$<<project.name>>"
frag = "dmyersturnbull/tyranno-sandbox"
# ::tyranno:: copyright = "Copyright $<<now_utc().year>>, Contributors to $<<project.name>>"
copyright = "Copyright 2026, Contributors to sandbox-tyranno"
doi = "10.5281/zenodo.4485186" # <<<comment out for new projects
# ::tyranno alias:: license-data = $<< $.project.license.text.spdx_license(@) >>

# -------------------------- Python version data ------------------------------
[tool.tyranno.data.python-versions]
# List compatible Python versions; e.g. ["3.13.0", [...], "3.13.9, "3.14.0"]`.
# Then choose a default (max), and versions to test (max per minor version).
# ::tyranno alias:: valid = $<< $ .project ."requires-python" .join("", ["python", @]) .pep440_find(@) >>
# ::tyranno alias:: default = $<< ^@ .valid | pep440_max(@) .minor_version >>
# ::tyranno alias:: test = $<< ^@ .valid | pep440_max_per(@, "minor") >>
